--- a/css/style.scss
+++ b/css/style.scss
@@ -53,7 +53,8 @@ ul {
 			margin-right: auto;
 			// max-width: 80%;
 			height: 5rem;
-			padding: 0.3rem;
+			padding: 0.15rem;
+			margin: 0 .2rem 0;
 			border: 1px #333 dashed;
 			// width: 100%;
 		}
