--- a/css/style.scss
+++ b/css/style.scss
@@ -52,10 +52,9 @@ ul {
 			margin-left: auto;
 			margin-right: auto;
 			// max-width: 80%;
-			height: 5rem;
-			padding: 0.15rem;
-			margin: 0 .2rem 0;
-			border: 1px #333 dashed;
+			height: 8rem;
+			margin: 0 -.2rem 0;
+			box-shadow: -0.5rem 0 1rem #111;
 			// width: 100%;
 		}
 
@@ -63,13 +62,13 @@ ul {
 			position: absolute;
 			display: block;
 			top: -.5rem;
-			right: -.5rem;
+			left: -.5rem;
 			background-color: $caption_black;
 			padding: .2rem;
 			border-radius: 50%;
 			color: $c_caption;
 			font-weight: bold;
-			font-size: .6rem;
+			font-size: .4rem;
 		}
 	}
 	
