--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 //Colors
-$caption_black: rgba(85,85,85, 0.8);
+$caption_black: rgba(2, 117, 216, .6);
+
 $c_caption: rgba(225,225,225, 1);
 
 // General
@@ -46,29 +47,34 @@ ul {
 
 	.carousel-card {
 		
-		
+		margin-top: 1.5rem;
 		
 		.carousel-cover {
+
 			margin-left: auto;
 			margin-right: auto;
 			// max-width: 80%;
 			height: 8rem;
-			margin: 0 -.2rem 0;
+			margin: 0 -.4rem 0;
 			box-shadow: -0.5rem 0 1rem #111;
 			// width: 100%;
 		}
 
 		.carousel-time {
 			position: absolute;
-			display: block;
-			top: -.5rem;
-			left: -.5rem;
+			top: .5rem;
+			left: -.9rem;
 			background-color: $caption_black;
-			padding: .2rem;
+			width: 2rem;
+			height: 2rem;
 			border-radius: 50%;
 			color: $c_caption;
 			font-weight: bold;
-			font-size: .4rem;
+			font-size: .55rem;
+			display: block;
+			align-items: center;
+			text-align: center;	
+			line-height: 2rem;
 		}
 	}
 	
