--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ ul {
     margin-bottom: 0; }
 
 .book-showcase {
-  border-bottom: 1px solid #333; }
+  border-bottom: 1px solid rgba(85, 85, 85, 0.4); }
 
 .list-title {
   padding-top: .5rem; }
@@ -30,22 +30,26 @@ ul {
     margin-left: auto;
     margin-right: auto;
     height: 8rem;
-    margin: 0 -.4rem 0;
+    margin: 0 -.6rem 0;
     box-shadow: -0.5rem 0 1rem #111; }
   .carousel .carousel-card .carousel-time {
     position: absolute;
     top: .5rem;
-    left: -.9rem;
+    left: -1.2rem;
     background-color: rgba(2, 117, 216, 0.6);
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-    color: #e1e1e1;
+    color: #f6f6f6;
     font-weight: bold;
     font-size: .55rem;
     display: block;
     align-items: center;
     text-align: center;
     line-height: 2rem; }
+
+footer {
+  padding: .5rem;
+  margin-top: 1.5rem; }
 
 /*# sourceMappingURL=style.css.map */
