--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,8 @@ ul {
 	list-style: none;
 }
 
+// elements 
+
 .navbar-brand {
 	padding-left: 1rem;
 }
@@ -31,6 +33,11 @@ ul {
 
 .book-showcase {
 	border-bottom: 1px solid rgba(85, 85, 85, .4);
+
+}
+
+.container:nth-last-of-type(1) .book-showcase {
+	border-bottom: none;
 }
 
 .list-title {
