--- a/css/style-test.scss
+++ b/css/style-test.scss
@@ -11,8 +11,8 @@
 
 ul {
 	list-style: none;
-	margin: 0;
-	padding: 0;
+	// margin: 0;
+	// padding: 0;
 }
 
 html,body {
@@ -104,16 +104,15 @@ body {
 	background: $card_bg_c;
 	border-radius: 10px;
 	padding: 1rem;
-	margin: -0px 1rem;
-
-
+	display: inline-block;
 	ul {
 		padding: 0;
-
+	display: inline-block;
 	}
 	
 	.search-card {
-		display: flex;
+		display: inline-flex;
+		flex-flow: space-between;
 
 
 		.search-details-cover {
@@ -121,7 +120,6 @@ body {
 			padding-right: 1rem;
 			vertical-align:  top;
 			text-align: center;
-			flex-grow: 3;
 
 			img{
 				height: 7rem;
@@ -151,7 +149,6 @@ body {
 				color: white;
 				border-radius: 5px;
 				padding: .3rem;
-				margin-right: .3rem;
 				display: inline-block;
 			}
 
@@ -160,7 +157,6 @@ body {
 
 		.search-details-info {
 			display: inline-block;
-			flex-grow: 3;
 
 			.search-details-title{
 				margin-bottom: .1rem;
