--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
 ul {
   list-style: none; }
 
+p {
+  margin: 0;
+  padding: 0; }
+
 .navbar {
   box-shadow: 0 2px 2px  gray; }
 
@@ -109,5 +113,60 @@ footer {
 * {
   box-sizing: border-box;
   font-family: "Lucida Grande", "Tahoma", "Verdana", "Arial", sans-serif !important; }
+
+body {
+  width: 100%;
+  height: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  background: #e8e9e9;
+  color: #000; }
+
+.container-test {
+  margin: 45px auto;
+  padding: 15px;
+  border-radius: 3px;
+  background: #fff; }
+
+.search-card-test {
+  padding: 10px;
+  border-radius: 5px;
+  background: #e2e2e2;
+  display: flex; }
+  .search-card-test .search-details-cover-test {
+    margin-right: .7rem;
+    display: flex;
+    flex-direction: column; }
+    .search-card-test .search-details-cover-test img {
+      margin: 0 auto;
+      height: 7rem; }
+  .search-card-test .search-details-info-test {
+    margin-right: .5rem; }
+    .search-card-test .search-details-info-test .search-details-time-test .search-details-time-title-test {
+      text-decoration: underline; }
+    .search-card-test .search-details-info-test .search-details-time-test .search-details-time-amount-test {
+      font-size: .8rem;
+      font-weight: bold;
+      background-color: rgba(2, 117, 216, 0.6);
+      color: white;
+      border-radius: 5px;
+      padding: .3rem;
+      margin-right: .3rem;
+      display: block; }
+  .search-card-test .search-details-table-test {
+    display: flex;
+    flex-direction: column;
+    font-size: .6rem;
+    justify-content: center; }
+    .search-card-test .search-details-table-test tr:nth-last-of-type(n + 2) {
+      border-bottom: 1px solid #ccc; }
+    .search-card-test .search-details-table-test th {
+      padding-right: .5rem;
+      font-weight: bold; }
+    .search-card-test .search-details-table-test img {
+      margin-top: 1rem; }
+    @media (max-width: 480px) {
+      .search-card-test .search-details-table-test {
+        display: none; } }
 
 /*# sourceMappingURL=style.css.map */
