--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,8 @@ $bg_c_caption: rgba(2, 117, 216, .6);
 
 $c_caption: rgba(246,246,246, 1);
 
+$main-font-color: #000;
+
 // General
 
 
@@ -19,6 +21,11 @@ body {
 
 ul {
 	list-style: none;
+}
+
+p {
+	margin: 0;
+	padding: 0;
 }
 
 // elements 
@@ -184,4 +191,81 @@ footer {
 	font-family: $lucida-grande !important;
 	// font-family: $monospace !important;
 	// font-family: $verdana !important;
+}
+
+body{
+	width: 100%;
+	height: 100%;
+	padding-left: 5%;
+	padding-right: 5%;
+	background: #e8e9e9;
+	color: $main-font-color;
+
+}
+.container-test {
+	margin: 45px auto;
+	padding: 15px;
+	border-radius: 3px;
+	background: #fff;
+}
+.search-card-test{
+	padding: 10px;
+	border-radius: 5px;
+	background: #e2e2e2;
+	display: flex;
+
+	.search-details-cover-test {
+		margin-right: .7rem;
+		display: flex;
+		flex-direction: column;
+		img {
+			margin: 0 auto;
+			height: 7rem;
+		}
+	}
+	
+	.search-details-info-test {
+		margin-right: .5rem;
+		.search-details-time-test {
+
+			.search-details-time-title-test {
+				text-decoration: underline;
+			}
+
+			.search-details-time-amount-test {
+				font-size: .8rem;
+				font-weight: bold;
+				background-color: $bg_c_caption;
+				color: white;
+				border-radius: 5px;
+				padding: .3rem;
+				margin-right: .3rem;
+				display: block;
+			}
+
+		}
+	}
+
+	.search-details-table-test {
+		display: flex;
+		flex-direction: column;
+		font-size: .6rem;
+		justify-content: center;
+		tr:nth-last-of-type(n + 2) {
+			border-bottom: 1px solid #ccc;
+
+		}
+		th {
+			padding-right: .5rem;
+			font-weight: bold;
+		}
+		img {
+			margin-top: 1rem;
+		}
+	
+		@media (max-width: 480px) {
+			display: none;
+		}
+	}
+
 }
