--- a/css/style.scss
+++ b/css/style.scss
@@ -238,11 +238,13 @@ body{
 		margin-right: .5rem;
 
 		.search-details-title-test {
-			margin-bottom: .2rem;
+			margin-bottom: .1rem;
+			font-size: 1.1rem;
 		}
 
 		.search-details-author-test {
 			margin-bottom: .4rem;
+			font-size: .7rem;
 		}
 
 
@@ -250,6 +252,9 @@ body{
 
 			.search-details-time-title-test {
 				text-decoration: underline;
+				margin-bottom: .2rem;	
+					font-size: .9rem;
+		
 			}
 
 			.search-details-time-amount-test {
