--- a/css/style.css
+++ b/css/style.css
@@ -141,32 +141,42 @@ body {
     .search-card-test .search-details-cover-test .details-link-test {
       text-align: center;
       font-weight: bolder;
-      margin-bottom: 0;
-      font-size: .8rem; }
+      margin-top: auto;
+      font-size: .8rem;
+      line-height: 1rem; }
     .search-card-test .search-details-cover-test img {
-      margin: 0 auto;
+      margin: 0 auto .3rem;
       height: 7rem; }
   .search-card-test .search-details-info-test {
-    margin-right: .5rem; }
+    margin-right: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start; }
     .search-card-test .search-details-info-test .search-details-title-test {
       margin-bottom: .1rem;
       font-size: .9rem; }
     .search-card-test .search-details-info-test .search-details-author-test {
       margin-bottom: .4rem;
       font-size: .6rem; }
-    .search-card-test .search-details-info-test .search-details-time-test .search-details-time-title-test {
-      text-decoration: underline;
-      margin-bottom: .2rem;
-      font-size: .9rem; }
-    .search-card-test .search-details-info-test .search-details-time-test .search-details-time-amount-test {
-      font-size: .3rem;
-      font-weight: bold;
-      background-color: rgba(2, 117, 216, 0.6);
-      color: white;
-      border-radius: 5px;
-      padding: .3rem;
-      margin-right: .3rem;
-      display: block; }
+    .search-card-test .search-details-info-test .search-details-time-test {
+      margin-bottom: .3rem; }
+      .search-card-test .search-details-info-test .search-details-time-test .search-details-time-title-test {
+        text-decoration: underline;
+        margin-bottom: .2rem;
+        font-size: .9rem; }
+      .search-card-test .search-details-info-test .search-details-time-test .search-details-time-amount-test {
+        font-size: .8rem;
+        font-weight: bold;
+        background-color: rgba(2, 117, 216, 0.6);
+        color: white;
+        border-radius: 5px;
+        padding: .3rem;
+        margin-right: .3rem;
+        display: block; }
+    .search-card-test .search-details-info-test img {
+      flex-grow: 0;
+      margin-top: auto; }
   .search-card-test .search-details-table-test {
     display: flex;
     flex-direction: column;
