--- a/css/style.scss
+++ b/css/style.scss
@@ -219,23 +219,28 @@ body{
 		margin-right: .7rem;
 		display: flex;
 		flex-direction: column;
-
+	
 
 		.details-link-test {
 			text-align: center;
 			font-weight: bolder;
-			margin-bottom: 0;
+			margin-top: auto;
 			font-size: .8rem;
+			line-height: 1rem;
 		}
 
 		img {
-			margin: 0 auto;
+			margin: 0 auto .3rem;
 			height: 7rem;
 		}
 	}
 	
 	.search-details-info-test {
 		margin-right: .5rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
 
 		.search-details-title-test {
 			margin-bottom: .1rem;
@@ -249,6 +254,8 @@ body{
 
 
 		.search-details-time-test {
+			
+			margin-bottom: .3rem;
 
 			.search-details-time-title-test {
 				text-decoration: underline;
@@ -258,7 +265,7 @@ body{
 			}
 
 			.search-details-time-amount-test {
-				font-size: .3rem;
+				font-size: .8rem;
 				font-weight: bold;
 				background-color: $bg_c_caption;
 				color: white;
@@ -268,6 +275,11 @@ body{
 				display: block;
 			}
 
+		}
+
+		img {
+			flex-grow: 0;
+			margin-top: auto;
 		}
 	}
 
