--- a/css/style.scss
+++ b/css/style.scss
@@ -244,12 +244,12 @@ body{
 
 		.search-details-title-test {
 			margin-bottom: .1rem;
-			font-size: .9rem;
+			font-size: 1.05rem;
 		}
 
 		.search-details-author-test {
 			margin-bottom: .4rem;
-			font-size: .6rem;
+			font-size: .65rem;
 		}
 
 
