--- a/css/style.scss
+++ b/css/style.scss
@@ -210,6 +210,7 @@ body{
 	background: #fff;
 }
 .search-card-test{
+	margin-bottom: 1rem;
 	padding: 10px;
 	border-radius: 5px;
 	background: #e2e2e2;
@@ -232,6 +233,7 @@ body{
 		img {
 			margin: 0 auto .3rem;
 			height: 7rem;
+			box-shadow: 0px 0px 4px #222
 		}
 	}
 	
@@ -286,7 +288,7 @@ body{
 	.search-details-table-test {
 		display: flex;
 		flex-direction: column;
-		font-size: .6rem;
+		font-size: .9rem;
 		justify-content: center;
 		tr:nth-last-of-type(n + 2) {
 			border-bottom: 1px solid #ccc;
@@ -296,9 +298,7 @@ body{
 			padding-right: .5rem;
 			font-weight: bold;
 		}
-		img {
-			margin-top: 1rem;
-		}
+
 
 		@media (max-width: 480px) {
 			display: none;
