--- a/jade/pages/index.jade
+++ b/jade/pages/index.jade
@@ -3,7 +3,7 @@ extends ../base
 
 append jumbotron
   .row.pt-1.text-xs-center
-    h4 Reading Should Be Fun
+    h4 Reading Is Fun
     p.small We are here to help you make the most of it!
 
 block content
