--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   margin-top: 56px;
   min-height: calc(100vh - 40px);
-  width: 100%;
+  width: 100vw;
 }
 
 ul {
@@ -90,7 +90,7 @@ p {
 }
 
 .list-title {
-  padding-top: .5rem;
+  padding-top: 1.5rem;
 }
 
 .carousel ul {
